# prompt-injection-detection-vi-en

./: .gitignore  AGENTS.md  README.md  evaluate_models.py  main.py  pyproject.toml  run_classification.py  test.jsonl  train.jsonl
finetune/: bamibert-description-readme.md  bamibert.ipynb  mdeberta-description-readme.md  mdeberta-v3-base.ipynb
prompt-injection-demo-vi-en/: index.html
