[project]
name = "prompt-injection-detection-vi-en"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.22.0",
    "numpy<2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "transformers>=5.13.0",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.3",
    "tiktoken>=0.7.0",
]

